@@ -13,7 +13,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkMain.c,v 1.24 2007/09/07 00:34:53 dgp Exp $
+ * RCS: @(#) $Id: tkMain.c,v 1.25 2007/09/10 13:35:42 dgp Exp $
  */
 
 #include <ctype.h>
@@ -110,7 +110,7 @@ Tk_MainEx(
      * only an issue when Tk is loaded dynamically.
      */
 
-    if (Tcl_InitStubs(interp, TCL_PATCH_LEVEL, 1) == NULL) {
+    if (Tcl_InitStubs(interp, TCL_VERSION, 1) == NULL) {
 	abort();
     }
 
